activity_diagnose.xml (성장진단->아이발달상태진단) Growth_Activity.java (Diagnose_Activity) 연결 Diagnose_Activity.java 파일

--- a/Mom_Baby/AndroidManifest.xml
+++ b/Mom_Baby/AndroidManifest.xml
@@ -36,6 +36,8 @@
         </activity>
         <activity android:name=".AddBaby2_Activity" >
         </activity>
+        <activity android:name=".Diagnose_Activity" >
+        </activity>
     </application>
 
 </manifest>
