--- a/Mom_Baby/AndroidManifest.xml
+++ b/Mom_Baby/AndroidManifest.xml
@@ -38,6 +38,8 @@
         </activity>
         <activity android:name=".Diagnose_Activity" >
         </activity>
+        <activity android:name=".Process_Activity" >
+        </activity>
     </application>
 
 </manifest>
