--- a/Mom_Baby/AndroidManifest.xml
+++ b/Mom_Baby/AndroidManifest.xml
@@ -40,6 +40,12 @@
         </activity>
         <activity android:name=".Process_Activity" >
         </activity>
+        <activity android:name=".Injection_Activity" >
+        </activity>
+        <activity android:name=".Calendar_Activity" >
+        </activity>
+        <activity android:name=".List_Activity" >
+        </activity>
     </application>
 
 </manifest>
