--- a/Mom_Baby/bin/AndroidManifest.xml
+++ b/Mom_Baby/bin/AndroidManifest.xml
@@ -36,6 +36,16 @@
         </activity>
         <activity android:name=".AddBaby2_Activity" >
         </activity>
+        <activity android:name=".Diagnose_Activity" >
+        </activity>
+        <activity android:name=".Process_Activity" >
+        </activity>
+        <activity android:name=".Injection_Activity" >
+        </activity>
+        <activity android:name=".Calendar_Activity" >
+        </activity>
+        <activity android:name=".List_Activity" >
+        </activity>
     </application>
 
 </manifest>
