--- a/Mom_Baby/AndroidManifest.xml
+++ b/Mom_Baby/AndroidManifest.xml
@@ -46,6 +46,8 @@
         </activity>
         <activity android:name=".List_Activity" >
         </activity>
+        <activity android:name=".Hospital_Activity" >
+        </activity>
     </application>
 
 </manifest>
