--- a/Mom_Baby/AndroidManifest.xml
+++ b/Mom_Baby/AndroidManifest.xml
@@ -48,6 +48,12 @@
         </activity>
         <activity android:name=".Hospital_Activity" >
         </activity>
+        <activity android:name=".Magazine_Activity" >
+        </activity>
+        <activity android:name=".Common_Activity" >
+        </activity>
+        <activity android:name=".Story_Activity" >
+        </activity>
     </application>
 
 </manifest>
